--- a/quiz.html
+++ b/quiz.html
@@ -401,7 +401,51 @@
                     <div id="quizOverlay">
                     </div>
                     <h3>Quiz Questions</h3>
-
+		    <div class="form-group no-select">
+    <p><strong>1. What is the primary purpose of HTML (HyperText Markup Language)?</strong></p>
+    <div class="radio-group">
+        <label><input type="radio" id="q1_a" name="Question1" value="A" required>A. To control the layout and styling of a web page.</label>
+        <label><input type="radio" id="q1_b" name="Question1" value="B">B. To manage server-side logic and databases.</label>
+        <label><input type="radio" id="q1_c" name="Question1" value="C">C. To define the structure and content of a web page.</label>
+        <label><input type="radio" id="q1_d" name="Question1" value="D">D. To handle user interactions and dynamic behavior.</label>
+    </div>
+</div>
+<div class="form-group no-select">
+    <p><strong>2. Which HTML tag is used to contain all of the visible content of an HTML document?</strong></p>
+    <div class="radio-group">
+        <label><input type="radio" id="q2_a" name="Question2" value="A" required>A. &lt;head&gt;</label>
+        <label><input type="radio" id="q2_b" name="Question2" value="B">B. &lt;html&gt;</label>
+        <label><input type="radio" id="q2_c" name="Question2" value="C">C. &lt;body&gt;</label>
+        <label><input type="radio" id="q2_d" name="Question2" value="D">D. &lt;title&gt;</label>
+    </div>
+</div>
+<div class="form-group no-select">
+    <p><strong>3. In CSS, what is the role of a Selector?</strong></p>
+    <div class="radio-group">
+        <label><input type="radio" id="q3_a" name="Question3" value="A" required>A. It defines the specific style attributes to be applied.</label>
+        <label><input type="radio" id="q3_b" name="Question3" value="B">B. It assigns the appearance to a property.</label>
+        <label><input type="radio" id="q3_c" name="Question3" value="C">C. It targets the HTML elements to which styles will be applied.</label>
+        <label><input type="radio" id="q3_d" name="Question3" value="D">D. It links the CSS file to the HTML document.</label>
+    </div>
+</div>
+<div class="form-group no-select">
+    <p><strong>4. If you want to change the text color of a paragraph, which of the following CSS Property:Value pairs would you use?</strong></p>
+    <div class="radio-group">
+        <label><input type="radio" id="q4_a" name="Question4" value="A" required>A. background-color: blue;</label>
+        <label><input type="radio" id="q4_b" name="Question4" value="B">B. font-family: serif;</label>
+        <label><input type="radio" id="q4_c" name="Question4" value="C">C. color: blue;</label>
+        <label><input type="radio" id="q4_d" name="Question4" value="D">D. text-align: center;</label>
+    </div>
+</div>
+<div class="form-group no-select">
+    <p><strong>5. Which CSS selector type would you use to apply a style to a single, unique element in an HTML page?</strong></p>
+    <div class="radio-group">
+        <label><input type="radio" id="q5_a" name="Question5" value="A" required>A. Element Selector</label>
+        <label><input type="radio" id="q5_b" name="Question5" value="B">B. ID Selector</label>
+        <label><input type="radio" id="q5_c" name="Question5" value="C">C. Class Selector</label>
+        <label><input type="radio" id="q5_d" name="Question5" value="D">D. Property Selector</label>
+    </div>
+</div>
 
 		    <!-- ADD QNS BEFORE THIS TAG-->                
                     <p><strong>After submission wait until you see a tick</strong></p>
