--- a/quiz.html
+++ b/quiz.html
@@ -370,10 +370,6 @@
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="Name" required placeholder="Enter your full name">
                 </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="Email" required placeholder="your.email@example.com">
-                </div>
 
                 <div class="form-group">
                     <label for="department">Department:</label>
@@ -401,51 +397,49 @@
                     <div id="quizOverlay">
                     </div>
                     <h3>Quiz Questions</h3>
-		    <div class="form-group no-select">
-    <p><strong>1. What is the primary purpose of HTML (HyperText Markup Language)?</strong></p>
+<div class="form-group no-select">
+    <p><strong>1. Which component sends an HTTP request to a server and renders the received content?</strong></p>
     <div class="radio-group">
-        <label><input type="radio" id="q1_a" name="Question1" value="A" required>A. To control the layout and styling of a web page.</label>
-        <label><input type="radio" id="q1_b" name="Question1" value="B">B. To manage server-side logic and databases.</label>
-        <label><input type="radio" id="q1_c" name="Question1" value="C">C. To define the structure and content of a web page.</label>
-        <label><input type="radio" id="q1_d" name="Question1" value="D">D. To handle user interactions and dynamic behavior.</label>
+        <label><input type="radio" id="q1_a" name="Question1" value="A" required>A. Web Server</label>
+        <label><input type="radio" id="q1_b" name="Question1" value="B">B. Front-end Development</label>
+        <label><input type="radio" id="q1_c" name="Question1" value="C">C. Web Browser</label>
+        <label><input type="radio" id="q1_d" name="Question1" value="D">D. A website file</label>
     </div>
 </div>
 <div class="form-group no-select">
-    <p><strong>2. Which HTML tag is used to contain all of the visible content of an HTML document?</strong></p>
+    <p><strong>2. What does the &lt;body&gt; tag contain in an HTML document?</strong></p>
     <div class="radio-group">
-        <label><input type="radio" id="q2_a" name="Question2" value="A" required>A. &lt;head&gt;</label>
-        <label><input type="radio" id="q2_b" name="Question2" value="B">B. &lt;html&gt;</label>
-        <label><input type="radio" id="q2_c" name="Question2" value="C">C. &lt;body&gt;</label>
-        <label><input type="radio" id="q2_d" name="Question2" value="D">D. &lt;title&gt;</label>
+        <label><input type="radio" id="q2_a" name="Question2" value="A" required>A. Meta information, such as the title</label>
+        <label><input type="radio" id="q2_b" name="Question2" value="B">B. The root element of the webpage</label>
+        <label><input type="radio" id="q2_c" name="Question2" value="C">C. The visible content displayed on the webpage</label>
+        <label><input type="radio" id="q2_d" name="Question2" value="D">D. The document type declaration</label>
     </div>
 </div>
 <div class="form-group no-select">
-    <p><strong>3. In CSS, what is the role of a Selector?</strong></p>
+    <p><strong>3. Which of the following is true about CSS?</strong></p>
     <div class="radio-group">
-        <label><input type="radio" id="q3_a" name="Question3" value="A" required>A. It defines the specific style attributes to be applied.</label>
-        <label><input type="radio" id="q3_b" name="Question3" value="B">B. It assigns the appearance to a property.</label>
-        <label><input type="radio" id="q3_c" name="Question3" value="C">C. It targets the HTML elements to which styles will be applied.</label>
-        <label><input type="radio" id="q3_d" name="Question3" value="D">D. It links the CSS file to the HTML document.</label>
+        <label><input type="radio" id="q3_a" name="Question3" value="A" required>A. It is used to create the basic skeleton of a webpage.</label>
+        <label><input type="radio" id="q3_b" name="Question3" value="B">B. It is used to apply styles like colors and fonts to a webpage.</label>
+        <label><input type="radio" id="q3_c" name="Question3" value="C">C. It is a programming language used for adding interactive features to a webpage.</label>
+        <label><input type="radio" id="q3_d" name="Question3" value="D">D. Its rules consist of a selector, a declaration block, and a skeleton.</label>
     </div>
 </div>
 <div class="form-group no-select">
-    <p><strong>4. If you want to change the text color of a paragraph, which of the following CSS Property:Value pairs would you use?</strong></p>
+    <p><strong>4. Which CSS selector is used to select and style a single, unique element?</strong></p>
     <div class="radio-group">
-        <label><input type="radio" id="q4_a" name="Question4" value="A" required>A. background-color: blue;</label>
-        <label><input type="radio" id="q4_b" name="Question4" value="B">B. font-family: serif;</label>
-        <label><input type="radio" id="q4_c" name="Question4" value="C">C. color: blue;</label>
-        <label><input type="radio" id="q4_d" name="Question4" value="D">D. text-align: center;</label>
+        <label><input type="radio" id="q4_a" name="Question4" value="A" required>A. <mark>.</mark> (Class Selector)</label>
+        <label><input type="radio" id="q4_b" name="Question4" value="B">B. <mark>*</mark> (Universal Selector)</label>
+        <label><input type="radio" id="q4_c" name="Question4" value="C">C. <mark>#</mark> (ID Selector)</label>
+        <label><input type="radio" id="q4_d" name="Question4" value="D">D. <mark>></mark> (Child Combinator) </label>
     </div>
 </div>
+
 <div class="form-group no-select">
-    <p><strong>5. Which CSS selector type would you use to apply a style to a single, unique element in an HTML page?</strong></p>
-    <div class="radio-group">
-        <label><input type="radio" id="q5_a" name="Question5" value="A" required>A. Element Selector</label>
-        <label><input type="radio" id="q5_b" name="Question5" value="B">B. ID Selector</label>
-        <label><input type="radio" id="q5_c" name="Question5" value="C">C. Class Selector</label>
-        <label><input type="radio" id="q5_d" name="Question5" value="D">D. Property Selector</label>
-    </div>
+    <p><strong>5. Write the HTML and CSS to create a webpage with a main title and a sentence. The background should be light gray, and the sentence text should be blue. </strong></p>
+    <textarea id="q5_text" name="Question5" rows="6" placeholder="Your answer here..." required></textarea>
 </div>
+</div>
+
 
 		    <!-- ADD QNS BEFORE THIS TAG-->                
                     <p><strong>After submission wait until you see a tick</strong></p>
