--- a/quiz.html
+++ b/quiz.html
@@ -518,54 +518,63 @@
                     </div>
                     <h3>Quiz Questions</h3>
                     <div class="form-group no-select">
-                        <p><strong>1. Which of the following describes the Mobile-First Approach in Responsive Web
-                                Design?</strong></p>
-                        <div class="radio-group"> <label><input type="radio" id="q1_a" name="Question1" value="A"
-                                    required>A. Designing for large desktop screens first, then creating a separate,
-                                stripped-down version for mobile devices.</label> <label><input type="radio" id="q1_b"
-                                    name="Question1" value="B">B. Using only JavaScript to handle layout changes instead
-                                of CSS media queries.</label> <label><input type="radio" id="q1_c" name="Question1"
-                                    value="C">C. Starting the design process with simple, fast-loading layouts for
-                                smaller screens, then scaling up for larger screens.</label> <label><input type="radio"
-                                    id="q1_d" name="Question1" value="D">D. Ensuring all website images are extremely
-                                high resolution, regardless of the user's device.</label> </div>
+                        <p><strong>1. Which of the following JavaScript variable declarations is block-scoped and can be reassigned a new
+                                value later in the code?</strong></p>
+                        <div class="radio-group">
+                            <label><input type="radio" id="q1_a" name="Question1" value="A" required>A. const count = 10;</label>
+                            <label><input type="radio" id="q1_b" name="Question1" value="B">B. var total = 50;</label>
+                            <label><input type="radio" id="q1_c" name="Question1" value="C">C. let index = 0;</label>
+                            <label><input type="radio" id="q1_d" name="Question1" value="D">D. let PI = 3.14;</label>
+                        </div>
                     </div>
                     <div class="form-group no-select">
-                        <p><strong>2. Which Flexbox property is used to align flex items along the main axis (e.g., to
-                                horizontally center items in a row or vertically center them in a column)?</strong></p>
-                        <div class="radio-group"> <label><input type="radio" id="q2_a" name="Question2" value="A"
-                                    required>A. align-items</label> <label><input type="radio" id="q2_b"
-                                    name="Question2" value="B">B. flex-direction</label> <label><input type="radio"
-                                    id="q2_c" name="Question2" value="C">C. justify-content</label> <label><input
-                                    type="radio" id="q2_d" name="Question2" value="D">D. align-content</label> </div>
+                        <p><strong>2. Which of the following code snippets correctly demonstrates a JavaScript Function Expression?</strong>
+                        </p>
+                        <div class="radio-group">
+                            <label><input type="radio" id="q2_a" name="Question2" value="A" required>A.
+                                <code>function calculate(a, b) { return a + b; }</code></label>
+                            <label><input type="radio" id="q2_b" name="Question2" value="B">B.
+                                <code>const multiply = (a, b) => a * b;</code></label>
+                            <label><input type="radio" id="q2_c" name="Question2" value="C">C.
+                                <code>const subtract = function(a, b) { return a - b; };</code></label>
+                            <label><input type="radio" id="q2_d" name="Question2" value="D">D.
+                                <code>if (value &gt; 10) { // code block }</code></label>
+                        </div>
                     </div>
                     <div class="form-group no-select">
-                        <p><strong>3. What is the difference between a tag and an element?</strong></p>
-                        <div class="radio-group"> <label><input type="radio" id="q3_a" name="Question3" value="A"
-                                    required>A. A tag is a keyword enclosed in angle brackets (&lt;p&gt;), while an
-                                element includes the opening tag, closing tag, and all the content in between
-                                (&lt;p&gt;This is a paragraph.&lt;/p&gt;).</label> <label><input type="radio" id="q3_b"
-                                    name="Question3" value="B">B. A tag defines the content, and an element is used for
-                                styling.</label> <label><input type="radio" id="q3_c" name="Question3" value="C">C. An
-                                element is the building block of HTML, and a tag is used to create attributes.</label>
-                            <label><input type="radio" id="q3_d" name="Question3" value="D">D. There is no difference;
-                                the terms "tag" and "element" can be used interchangeably</label> </div>
+                        <p><strong>3. Which of the following data structures in JavaScript is primarily used to store ordered collections of
+                                items, such as a list of names or scores?</strong></p>
+                        <div class="radio-group">
+                            <label><input type="radio" id="q3_a" name="Question3" value="A" required>A. Function</label>
+                            <label><input type="radio" id="q3_b" name="Question3" value="B">B. Array</label>
+                            <label><input type="radio" id="q3_c" name="Question3" value="C">C. Boolean</label>
+                            <label><input type="radio" id="q3_d" name="Question3" value="D">D. Object</label>
+                        </div>
                     </div>
                     <div class="form-group no-select">
-                        <p><strong>4. Which of the following is the correct syntax for declaring a global CSS Variable
-                                (Custom Property) for a primary color with the value #007bff?</strong></p>
-                        <div class="radio-group"> <label><input type="radio" id="q4_a" name="Question4" value="A"
-                                    required>A. body { primary-color: #007bff; }</label> <label><input type="radio"
-                                    id="q4_b" name="Question4" value="B">B. :root { --primary-color: #007bff; }</label>
-                            <label><input type="radio" id="q4_c" name="Question4" value="C">C. var(--primary-color) =
-                                #007bff;</label> <label><input type="radio" id="q4_d" name="Question4" value="D">D. html
-                                { primary-color: var(#007bff); }</label> </div>
+                        <p><strong>4. What is the primary method used in JavaScript to attach a function that will execute when a specific
+                                event, like a button click, occurs on an HTML element?</strong></p>
+                        <div class="radio-group">
+                            <label><input type="radio" id="q4_a" name="Question4" value="A" required>A.
+                                <code>element.querySelector("click", myFunction)</code></label>
+                            <label><input type="radio" id="q4_b" name="Question4" value="B">B.
+                                <code>document.getElementById("btn").onclick = myFunction</code></label>
+                            <label><input type="radio" id="q4_c" name="Question4" value="C">C.
+                                <code>element.addEventListener("click", myFunction)</code></label>
+                            <label><input type="radio" id="q4_d" name="Question4" value="D">D.
+                                <code>element.textContent("click", myFunction)</code></label>
+                        </div>
                     </div>
                     <div class="form-group no-select">
-                        <p><strong>5. Task: Write the HTML code for a basic landing page that displays the text "Welcome
-                                to our Responsive Landing Page!" as a main heading, and includes the following meta tag
-                                in the &lt;head&gt; section to ensure initial responsiveness across devices:</strong>
-                        </p> <textarea id="q5_text" name="Question5" rows="6" placeholder="Your answer here..."
+                        <p><strong>5. Write the complete HTML, CSS, and JavaScript code for a basic To-Do List application.</strong></p>
+                        <p>Your solution must allow users to:
+                        <ol>
+                            <li>Add new tasks.</li>
+                            <li>Toggle a task as complete (e.g., using a strikethrough).</li>
+                            <li>Delete a task.</li>
+                        </ol>
+                        </p>
+                        <textarea id="q5_text" name="Question5" rows="8" placeholder="Enter your HTML, CSS, and JavaScript code here..."
                             required></textarea>
                     </div>
                 </div> <!-- ADD QNS BEFORE THIS TAG-->
