--- a/quiz.html
+++ b/quiz.html
@@ -574,10 +574,10 @@ user.age = 22;</code></pre>
 <p><strong>5. Task: Write the HTML code for a basic Weather App UI structure.</strong></p>
 <p>Your solution should include the following elements, clearly labeled with comments or placeholder content:</p>
 <ol>
-<li>An **Input field** for the user to type a city name.</li>
-<li>A **Button** to trigger the API data fetch.</li>
-<li>A container (e.g., a `div`) to display the **Weather Data** (Temperature, Description).</li>
-<li>A container (e.g., another `div`) for displaying **Error Messages** or a **Loading State**.</li>
+<li>An Input field for the user to type a city name.</li>
+<li>A Button to trigger the API data fetch.</li>
+<li>A container (e.g., a div) to display the Weather Data (Temperature, Description).</li>
+<li>A container (e.g., another div) for displaying Error Messages or a Loading State.</li>
 </ol>
 <textarea id="q5_text" name="Question5" rows="8" placeholder="Enter your HTML code here..."
 required></textarea>
